<resources>
    <string name="app_name">Songil</string>
    <string name="motto">당신의 일상에 공예를 더해보세요</string>
    <string name="login">로그인</string>
    <string name="do_login">로그인 하기</string>
    <string name="input_password">비밀번호를\n입력해주세요.</string>
    <string name="cannot_find_user_login">일치하는 회원 정보가 없습니다.</string>
    <string name="toast_login_success">로그인에 성공했습니다.</string>
    <string name="songil_welcome">안녕하세요. 손길입니다.</string>
    <string name="need_terms">원활한 서비스 이용을 위하여\n약관 동의가 필요합니다.</string>
    <string name="accept_all_terms">약관 전체 동의</string>
    <string name="terms_required_age">[필수] 만 14세 이상</string>
    <string name="terms_required_usage"><u>[필수] 이용약관 동의</u></string>
    <string name="use_term">이용약관</string>
    <string name="terms_required_privacy_policy"><u>[필수] 개인 정보 처리방침 동의</u></string>
    <string name="terms_privacy_policy">개인 정보 처리방침</string>
    <string name="terms_optional_ad"><u>[선택] 광고성 정보 수신 및 마케팅 활용 동의</u></string>
    <string name="terms_ad">광고성 정보 수신 및 마케팅 활용 동의</string>
    <string name="confirmation">확인</string>
    <string name="input_email_address">이메일 주소를\n입력해주세요.</string>
    <string name="receive_auth_code">인증 코드 받기</string>
    <string name="receive_again">다시받기</string>
    <string name="input_auth_code">인증 코드를 입력해주세요.</string>
    <string name="do_auth">인증하기</string>
    <string name="remain_time_with_time">남은시간 %d:%02d</string>
    <string name="additional_message_input_auth_code">입력하신 메일로 인증코드를 보냈어요!</string>
    <string name="set_password">비밀번호를 설정해주세요.</string>
    <string name="complete_input">입력 완료</string>
    <string name="password_rule">영문, 숫자, 특수기호가 포함된 9자 이상</string>
    <string name="available_password">사용가능한 비밀번호입니다.</string>
    <string name="not_fit_password_rule">비밀번호 요건을 충족해주세요.</string>
    <string name="confirm_password">입력했던 비밀번호를\n다시 입력해주세요.</string>
    <string name="not_match_password">입력했던 비밀번호와 일치하지 않습니다.</string>
    <string name="set_nickname">닉네임 설정</string>
    <string name="input_nickname">이제 다 됐어요!\n사용하실 닉네임을 적어주세요.</string>
    <string name="available_nickname">사용 가능한 닉네임 입니다.</string>
    <string name="unavailable_nickname_duplicate">중복된 닉네임입니다.</string>
    <string name="unavailable_nickname_word_cnt">닉네임은 1~10글자 사이로 작성해주세요.</string>
    <string name="unavailable_nickname_word_form">닉네임은 한글, 영문, 숫자로만 구성할 수 있습니다.</string>
    <string name="form_word_count">%d/%d</string>
    <string name="do_signup">회원가입 하기</string>
    <string name="signup">회원가입</string>
    <string name="duplicate_email">이미 가입된 이메일이에요.</string>
    <string name="duplicate_email_message">해당 이메일로 가입된 계정이 있습니다.\n처음으로 돌아가 로그인해주세요.</string>
    <string name="return_to_start"><u>처음으로</u></string>
    <string name="toast_signup_success">회원가입에 성공했습니다.</string>
    <string name="toast_signup_failure">회원가입에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="recent_search">최근 검색어</string>
    <string name="remove_all">모두 지우기</string>
    <string name="popular_search">인기 검색어</string>
    <string name="shop_eng">SHOP</string>
    <string name="with_eng">WITH</string>
    <string name="article_eng">ARTICLE</string>
    <string name="review_eng">REVIEW</string>
    <string name="form_price_won">%d won</string>
    <string name="form_price_won_string">%s won</string>
    <string name="new_eng">NEW</string>
    <string name="soldout_eng">SOLD OUT</string>
    <string name="form_search_result">총 %d개 검색 결과</string>
    <string name="form_number_bracket">(%d)</string>
    <string name="empty_recently_keywords">최근 검색 내역이 없습니다.</string>
    <string name="empty_input_text">검색어를 입력해주세요.</string>
    <string name="empty_shopping_basket">아직 장바구니에 담은 상품이 없어요.</string>
    <string name="shopping_basket">장바구니</string>
    <string name="select_all">전체 선택</string>
    <string name="select_all_with_count">전체 선택 (%d/%d)</string>
    <string name="form_payment">%d원 결제하기</string>
    <string name="form_payment_string">%s원 결제하기</string>
    <string name="word_minus">\u2212</string>
    <string name="word_plus">\u002b</string>
    <string name="do_report">신고하기</string>
    <string name="report_review">후기 신고하기</string>
    <string name="report_comment">댓글 신고하기</string>
    <string name="report_qna">QnA 신고하기</string>
    <string name="report_story">스토리 신고하기</string>
    <string name="report_abtest">AB TEST 신고하기</string>
    <string name="report_article">아티클 신고하기</string>
    <string name="report_craft_comment">코멘트 신고하기</string>
    <string name="reason_of_report">신고사유</string>
    <string name="profanity_and_slander">욕설 및 비방</string>
    <string name="pr_and_commercial">홍보 및 영리목적</string>
    <string name="illegal_infomation">불법 정보</string>
    <string name="obscenity_and_harm">음란 및 청소년 유해</string>
    <string name="personal_information_extrusion">개인정보 노출 및 유포</string>
    <string name="duplicate_spam">도배 및 스팸</string>
    <string name="self_write">직접 작성 (150자 내외)</string>
    <string name="write_report_reason">신고 사유를 작성해주세요.</string>
    <string name="report_receive">신고 완료</string>
    <string name="report_receive_message">의견 감사합니다\n검토 후 빠른 조치하겠습니다</string>
    <string name="write_order">주문서 작성</string>
    <string name="craft_information">상품 정보</string>
    <string name="shopping_address_information">배송지 정보</string>
    <string name="recipient">수령인</string>
    <string name="phone">휴대전화</string>
    <string name="zip_code">우편번호</string>
    <string name="search_address">주소찾기</string>
    <string name="address">주소</string>
    <string name="detail_address">상세주소</string>
    <string name="shipping_memo">배송메모</string>
    <string name="point_coupon">포인트 / 쿠폰</string>
    <string name="point">포인트</string>
    <string name="coupon">쿠폰</string>
    <string name="check_coupon">쿠폰확인</string>
    <string name="final_payment_amount">최종 결제금액</string>
    <string name="craft_payment_amount">상품 금액</string>
    <string name="shipping_fee">배송비</string>
    <string name="extra_shipping_fee">산간지역 배송비</string>
    <string name="point_discount">포인트 할인</string>
    <string name="coupon_discount">쿠폰 할인</string>
    <string name="sum">합계</string>
    <string name="form_price_won_kr_string">%s원</string>
    <string name="form_have_point">보유 포인트 %s</string>
    <string name="none">없음</string>
    <string name="sort_popular">인기순</string>
    <string name="sort_recent">최신순</string>
    <string name="sort_numberOfReview">리뷰 많은 순</string>
    <string name="sort_low_price">낮은 가격 순</string>
    <string name="sort_high_price">높은 가격 순</string>
    <string name="sort">정렬</string>
    <string name="material">소재</string>
    <string name="usage">용도</string>
    <string name="detail_eng">DETAIL</string>
    <string name="one_by_one_ask_eng">1:1 ASK</string>
    <string name="comment_eng">COMMENT</string>
    <string name="craft_description">작품 설명</string>
    <string name="size">크기</string>
    <string name="warning_notice">유의사항</string>
    <string name="detail_image">상세 이미지</string>
    <string name="refund_rule">교환,환불,취소규정</string>
    <string name="delivery_period">배송기간안내</string>
    <string name="cart_eng">CART</string>
    <string name="buy_now_eng">BUY NOW</string>
    <string name="buy_eng">BUY</string>
    <string name="inquiry">문의하기</string>
    <string name="method_check_question">작가로부터 온 답변은\n마이페이지에서 확인하실 수 있습니다.</string>
    <string name="question_about">에 대한 질문이나</string>
    <string name="question_about2">관련 질문 등</string>
    <string name="ask_to_artist_direct">작가에게 직접 물어보세요!</string>
    <string name="write_inquiry_content">문의 내용을 작성해주세요.</string>
    <string name="register_inquiry">문의 등록하기</string>
    <string name="form_craft_size">%d x %d x %d (cm)</string>
    <string name="show_only_photo_review">포토 코멘트만 보기</string>
    <string name="report_with_underline"><u>신고</u></string>
    <string name="block_with_underline"><u>차단</u></string>
    <string name="remove_with_underline"><u>삭제</u></string>
    <string name="form_count">%d/%d</string>
    <string name="form_single_count">%d개</string>
    <string name="form_artist_craft">%s / %s</string>
    <string name="major_field">전공분야</string>
    <string name="brief_history">약력</string>
    <string name="display_information">전시정보</string>
    <string name="craft_eng">CRAFT</string>
    <string name="complete_register_inquiry">문의 등록 완료</string>
    <string name="complete_register_inquiry_message">작가에게 전달되었습니다.\n답변은 마이페이지에서 확인해주세요</string>
    <string name="close_with_underline"><u>닫기</u></string>
    <string name="inquiry_answer">문의 답변하기</string>
    <string name="form_craft_nickname">%s / %s</string>
    <string name="do_answer">답변하기</string>
    <string name="complete_answer">답변완료</string>
    <string name="wait_answer">답변대기중</string>
    <string name="answer_content">답변 내용</string>
    <string name="hint_answer">답변 내용을 작성해주세요.</string>
    <string name="fail_to_send_answer">답변을 등록하는데 실패했습니다. 잠시 후에 다시 시도해주세요.</string>
    <string name="home_eng">HOME</string>
    <string name="my_eng">MY</string>
    <string name="form_this_week_popular">이번주 인기 %s</string>
    <string name="form_review_count">REVIEW %d</string>
    <string name="today_craft_eng">TODAY CRAFT</string>
    <string name="today_artisan_eng">TODAY ARTISAN</string>
    <string name="new_craft_eng">NEW CRAFT</string>
    <string name="form_artist">%s 작가</string>
    <string name="user_name_need_login">로그인이 필요합니다.</string>
    <string name="my_page_eng">MY PAGE</string>
    <string name="form_level">Lv. %d</string>
    <string name="favorite_product">찜한 상품</string>
    <string name="order_status">주문 현황</string>
    <string name="my_comment">내 코멘트</string>
    <string name="one_by_one_ask">1:1 문의</string>
    <string name="my_activity">내 활동</string>
    <string name="like_post">좋아요한 게시글</string>
    <string name="like_article">좋아요한 아티클</string>
    <string name="my_write">내가 쓴 글</string>
    <string name="comment_post">댓글 단 글</string>
    <string name="my_benefit">보유 베네핏</string>
    <string name="chat">댓글</string>
    <string name="setting">설정</string>
    <string name="modify_profile">프로필 수정</string>
    <string name="apply_social_login">소셜 로그인 연동</string>
    <string name="authorize_artist">작가 인증</string>
    <string name="logout">로그아웃</string>
    <string name="benefit">베네핏</string>
    <string name="change_to_artist_page">작가페이지로 전환</string>
    <string name="zero_integer">0</string>
    <string name="confirm_logout">로그아웃\n하시겠습니까?</string>
    <string name="modify_password">비밀번호 재설정</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="customer_center">고객센터</string>
    <string name="operating_time">운영시간</string>
    <string name="phone_number">전화번호</string>
    <string name="inquiry_use_kakao">카카오톡 채널로 문의하기</string>
    <string name="FnQ_eng">F&amp;Q</string>
    <string name="operating_time_value">평일 9:00 ~ 18:00\n(주말 &amp; 공휴일 제외)</string>
    <string name="phone_number_value">(02) 0000–0000</string>
    <string name="do_withdrawal">손길 탈퇴하기</string>
    <string name="check_before_withdrawal">회원탈퇴를 신청하기 전에 확인해주세요.</string>
    <string name="withdrawal_warning">탈퇴 후 회원정보 및 이용기록은 모두 삭제되며, 다시 복구 할 수 없습니다. 작성한 구매후기와 결제 내역은 이용약관과 관련법에 의해 보관됩니다. 동일한 SNS계정, 이메일, 전화번호를 사용한 재가입은 24시간 이내에는 불가능합니다.</string>
    <string name="register_withdrawal">탈퇴를 신청합니다.</string>
    <string name="company_name">손길(SONGIL)</string>
    <string name="representative_director">대표</string>
    <string name="representative_director_value">채세은</string>
    <string name="representative_director_phone_number">대표번호</string>
    <string name="representative_director_phone_number_value">010–2077–7578</string>
    <string name="business_registration_number">사업자등록번호</string>
    <string name="business_registration_number_value">803–08–01966</string>
    <string name="company_address">주소</string>
    <string name="company_address_value">서울특별시 송파구 올림픽로 212, A동 1238호</string>
    <string name="main_order_sales_registration_number">통신판매업신고</string>
    <string name="main_order_sales_registration_number_value">제2022–서울송파–1376</string>
    <string name="vertical_separator">|</string>
</resources>