<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/songil_1"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_back"
                        style="@style/toolbarButton"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/ic_back_22"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/customer_center"
                        android:textSize="16sp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_operating_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    android:text="@string/operating_time"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_operating_time_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_operating_time"
                    android:layout_marginTop="12dp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/spoqahansansneo_light"
                    android:textSize="13sp"
                    android:lineSpacingExtra="6sp"
                    android:lines="2"
                    android:text="@string/operating_time_value"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_operating_time_value"
                    android:layout_marginTop="32dp"
                    android:text="@string/phone_number"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_phoneNumber_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber"
                    android:layout_marginTop="12dp"
                    android:text="@string/phone_number_value"
                    android:textSize="13sp"
                    android:fontFamily="@font/spoqahansansneo_light"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_kakao"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber_value"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:gravity="center"
                    android:background="@drawable/shape_rectangle_black_radius_4"
                    android:text="@string/inquiry_use_kakao"
                    android:textColor="@color/songil_4"/>

                <View
                    android:id="@+id/space_kakao"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_kakao"
                    android:layout_marginTop="28dp"
                    android:background="@color/g_1"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_fnq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/space_kakao"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/FnQ_eng"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_fnq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_fnq"
                    android:layout_marginTop="16dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
